--- a/README
+++ b/README
@@ -68,3 +68,4 @@ People who contributed ideas, suggestions, or code to UNFS3:
 - Bernd Schubert <bernd-schubert@web.de>
 - Avery Pennarun <apenwarr@nit.ca>
 - Juergen Brendel <juergen@brendel.com>
+- Peter Astrand <peter@cendio.se>
