Mention Igor Durdanovic as contributor.

--- a/README
+++ b/README
@@ -73,3 +73,4 @@ People who contributed ideas, suggestions, or code to UNFS3:
 - Avery Pennarun <apenwarr@nit.ca>
 - Juergen Brendel <juergen@brendel.com>
 - Peter Astrand <peter@cendio.se>
+- Igor Durdanovic <idurdanovic@comcast.net>
