Credits for original filehandle concept.

--- a/README
+++ b/README
@@ -67,6 +67,10 @@ necessary files on changes.
 CREDITS
 =======
 
+The design of unfs3's filehandle code owes much to the original NFSv2
+universal user-space NFS server. Thanks to Mark Shand and Don Becker
+for coming up with those concepts.
+
 People who contributed ideas, suggestions, or code to UNFS3:
 
 - Bernd Schubert <bernd-schubert@web.de>
