Hint how to specify mount and nfs ports on Linux clients.

--- a/unfsd.8
+++ b/unfsd.8
@@ -104,7 +104,10 @@ serviced.
 Do not register with the portmapper. This will prevent other hosts from
 finding out the port numbers used for the MOUNT and NFS services by
 querying the portmap daemon. Clients
-will need to manually specify the port numbers to use.
+will need to manually specify the port numbers to use (on Linux clients,
+use the
+.BR mountport " and " port
+mount options).
 .TP
 .B \-w
 Allow the built-in file descriptor cache to expire writers. For
