Document atomic_attr() Solaris client fix.

--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,11 @@ The filehandle resolution code also had problems with directories
 that lack read permission. Therefore, filehandle lookups are now
 performed as root, before user and group id switching takes place.
 
+The file creation code had problems with the CREATE requests
+used by Solaris NFSv3 clients. This should now be fixed. Thanks
+to Brian (bohalloran@users.sf.net) for reporting the problem and
+providing the needed tcpdump data for fixing it.
+
 
 ChangeLog
 =========
@@ -20,6 +25,7 @@ Version 0.9.11
   - handle case where a tagged file exists but the master file doesn't
   - make clustering work in non-readable directories
   - make filehandle resolution work on non-readable directories
+  - fix file creation by Solaris NFS clients
 
 Version 0.9.10
 
