Use vsnprintf/syslog on systems that do not have vsyslog.

--- a/unfsd.8
+++ b/unfsd.8
@@ -200,8 +200,8 @@ will cause
 .B unfsd
 to output statistics about its filehandle and file descriptor cache
 to the system log. For the filehandle cache, it will output the number
-of filehandles in the cache, the total number of cache accesses, and a cache
-hit and miss percentage. For the file descriptor cache, it will output
+of filehandles in the cache, the total number of cache accesses, and the
+number of hits and misses. For the file descriptor cache, it will output
 the number of currently held open READ and WRITE file descriptors.
 .SH "EXPORTS FILE"
 The exports file,
