--- a/NEWS
+++ b/NEWS
@@ -1,19 +1,11 @@
-What's new or changed in 0.9.13
+What's new or changed in 0.9.14
 ===============================
-
-The one big change in this release is that unfs3 now supports
-the CREATE EXCLUSIVE procedure call where it only supported
-regular CREATE and CREATE GUARDED before. This is implemented
-by storing the create verifier passed in by the client in the
-mtime and atime attributes of the created file, which is the
-approach suggested by the NFSv3 specification itself. For the
-minor caveat of this approach, see the BUGS section of the
-manpage. Thanks go to Peter Åstrand <astrand@cendio.se> for
-providing the code.
 
 
 ChangeLog
 =========
+
+Version 0.9.14
 
 Version 0.9.13
 
