- change maintainer email address in documentation files - remove email address from copyright notices in individual files

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 UNFS3 (User-Space NFSv3 Server)
-(C) 2003-2004, Pascal Schmidt <der.eremit@email.de>
+(C) 2003-2006, Pascal Schmidt <unfs3-server@ewetel.net>
 
 
 INTRODUCTION
