Added news for 0.9.15 release.

--- a/NEWS
+++ b/NEWS
@@ -1,15 +1,24 @@
-What's new or changed in 0.9.14
+What's new or changed in 0.9.15
 ===============================
 
-The server now accepts SET_TO_SERVER_TIME for atime and mtime
-when creating file system objects.
-
-The old maintainer email address doesn't work anymore and has
-been replaced with a new one.
+The server now rejects mount requests coming from source
+ports below 1024. This behaviour matches other NFS server
+implementations and provides some shallow security against
+mount requests from user space clients. Such a mount could
+be used to obtain a file handle for an export and then use
+it for NFS requests with arbitrary user ids, thus being
+able to access any exported files regardless of real
+ownership. It should be noted that this doesn't help against
+a client's root user or users capable of sniffing the
+network used for NFS traffic. Patch by Frank v Waveren.
 
 
 ChangeLog
 =========
+
+Version 0.9.15
+
+  - reject mount requests from source ports below 1024
 
 Version 0.9.14
 
